--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,7 +43,7 @@ img {
 }
 
 #logo {
-    width: 10%;
+    width: 8%;
     padding-top: 0.5%;
     padding-left: 3em;
 }
@@ -202,6 +202,10 @@ h1 {
 }
 
 
+
+
+
+
 /*------------------TITLE LIST "TO DO/DOING/ETC"---------------------- */
 
 .list-container {
@@ -316,6 +320,16 @@ h3 {
     padding-right: 1em;
 }
 
+}
+
+.hold{
+  border: 3px solid #FF6B35;
+}
+
+.hovered{
+    background: #F7C59F;
+  }
+
 
 /*------------------FOOTER---------------------- */
 
@@ -361,4 +375,67 @@ footer {
 
 footer p {
     text-align: center;
+}
+
+/*-------------------------HOME PAGE---------------------------*/ 
+
+
+.homepage{
+    background-color: #e5e5e5;
+}
+
+.homepage h1{
+    margin-left: auto;
+    width: auto;
+}
+table{
+    width: 100%;
+    height: 310px;
+    position: relative;
+    margin-left: 40px;
+    padding: 10px;
+   
+}
+tr{
+    margin-top: 40px;
+
+}
+td{
+    padding: 20px;
+
+}
+.paragraph{
+    width: 50%;
+    margin-left: 30px;
+    padding: 20px;
+}
+
+.homeimg{
+    background-size: cover;
+    width: 40%;
+    height: 300px;
+}
+.homeimg .image{
+    object-fit: cover;
+    width: 600px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5%;
+}
+
+.image{
+    width: auto;
+    height: auto;
+}
+
+.demo{
+    height: 600px;
+    width: 100%;
+    padding-top: 100px;
+    background-color: #8ecae6;
+    text-align: center;
+}
+.demo h1{
+   text-align: center;
 }
